# emerald-vault-archive

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.adoc  README.md  cli.bats  cli.yml  deploy.sh  gcloud-appveyor.json.enc  usage.txt
.circleci/: config.yml  deploy.sh  gcloud-circleci.json.enc
docs/: README.adoc  SUMMARY.adoc  about.adoc  cli.adoc  cli.md  install.adoc  install.md  usage-accounts.adoc  usage-read.adoc  usage-server.adoc  usage-sign.adoc  usage.adoc
src/: indicator.rs  main.rs
src/cmd/: account.rs  arg_handlers.rs  error.rs  migrate.rs  mod.rs  transaction.rs  util.rs
src/ctrl/: error.rs  mod.rs  util.rs
src/rpc/: http.rs  mod.rs  serialize.rs
