[package]
name = "emerald-cli"
version = "0.12.1"
authors = ["Constantine Kryvomaz <kostiyantynk@gmail.com>"]
description = "Console utility for secure account management"
homepage = "http://etcdevteam.com"
repository = "https://github.com/ethereumproject/emerald-cli"
documentation = "https://docs.rs/emerald-cli"
keywords = ["ethereum-classic", "blockchain", "crypto-wallet", "cold-storage", "cli"]
categories = ["cli", "script"]
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "ethereumproject/emerald-cli" }
appveyor = { repository = "ethereumproject/emerald-cli" }

[[bin]]
name = "emerald"
path = "src/main.rs"

[dependencies]
log = "0.3"
docopt = "0.8"
jsonrpc-core = "7.0.1"
serde = "1.0"
hex = "0.2"
lazy_static = "0.2"
serde_json = "1.0"
serde_derive = "1.0"
emerald-rs = {path = "../emerald-rs"}
regex = "0.2"
rustc-serialize = "0.3"
hyper = "0.10"
reqwest = "0.6"
rpassword = "1.0"
env_logger = { version = "0.4", optional = true }
text_io = "0.1"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
# quickcheck_macros = "0.4"

[features]
default = ["cli"]
cli = ["env_logger"]
dev = ["clippy"]
