[package]
name = "emerald-vault"
version = "0.23.0"
authors = ["Constantine Kryvomaz <kostiyantynk@gmail.com>"]
description = "Console utility for secure account management"
homepage = "http://etcdevteam.com"
repository = "https://github.com/ETCDEVTeam/emerald-vault"
documentation = "https://docs.rs/emerald-vault"
keywords = ["ethereum-classic", "blockchain", "crypto-wallet", "cold-storage", "cli"]
categories = ["console", "bash"]
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "ETCDEVTeam/emerald-vault" }
appveyor = { repository = "ETCDEVTeam/emerald-vault" }

[[bin]]
name = "emerald"
path = "src/main.rs"

[dependencies]
log = "0.3"
jsonrpc-core = "7.1.1"
serde = "1.0"
hex = "0.2"
lazy_static = "0.2"
serde_json = "1.0"
serde_derive = "1.0"
emerald-rs = "0.23.0"
regex = "0.2"
hyper = "0.10"
reqwest = "0.6"
rpassword = "1.0"
url = "1.7.0"
text_io = "0.1"
clap = {version = "2.31", features = ["yaml", "color"]}
env_logger = { version = "0.4", optional = true }
clippy = {version = "0.0", optional = true}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
# quickcheck_macros = "0.4"

[features]
default = ["cli"]
cli = ["env_logger"]
dev = ["clippy"]
